--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="lt">
+<html lang="en">
   <head>
     <title>Sangvinijus</title>
     <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Sangvinijus/sangvinijus.github.io/main/.images/Main%20Logo.png">
